--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -1,2 +1,7 @@
-div
-    h2.text-center.text-6xl Crea tu cuenta de usuario
+extends ../layout/index
+
+block contenido 
+    div.py-10 
+        h2.text-center.font-extrabold.my-10.text-4xl.text-indigo-600 Bienes
+            span.font-normal.text-black Raices
+        h2.text-center.font-extrabold.text-2xl Crea tu cuenta
