--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -2,4 +2,7 @@ extends ../layout/index
 
 block contenido 
     div 
-        h2.text-center.font-extrabold.text-6xl Inicia sesión
+        h1.text-center.text-4xl.my-10.font-extrabold Bienes
+            span.font-normal Raíces
+        h2.text-center.font-extrabold.text-2xl =page
+        
