--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -1,7 +1,10 @@
 extends ../layout/index
 
 block contenido 
-    div.py-10 
-        h2.text-center.font-extrabold.my-10.text-4xl.text-indigo-600 Bienes
-            span.font-normal.text-black Raices
-        h2.text-center.font-extrabold.text-2xl Crea tu cuenta
+    .py-10 
+        h1.text-center.text-4xl.my-10.font-extrabold.text-indigo-600 Bienes
+            span.font-normal.text-black Raíces
+        h2.text-center.font-extrabold.text-2xl= page
+
+        .mt-8
+            .bg-white.py-8.px-4.shadow
