--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -8,7 +8,7 @@ block contenido
 
         .mt-8.mx-auto.max-w-md
             .bg-white.py-8.px-4.shadow
-                form(action="").space-y-5.px-6
+                form(method="POST" action="/auth/newUser").space-y-5.px-6
                     div     
                         label.block.text-sm.uppercase.text-gray-600.mb-2.font-nold Nombre Completo: 
                         input#name.w-full.px-3.py-2.border.border-gray-300.rounded-xl.placeholder.gray-400(type="text" placeholder="Ingresa tu nombre con apellidos" name="nombre_usuario")
