--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -11,9 +11,10 @@ block contenido
                 each error in errors
                     p.bg-red-600.text-white.uppercase.text-xs.p-2.mb-1.font-bold= error.msg
 
+        
         .mt-8.mx-auto.max-w-md
             .bg-white.py-8.px-4.shadow
-                form(method="POST" action="/auth/newUser").space-y-5.px-6
+                form(method="POST" action="/auth/newUser" novalidate).space-y-5.px-6
                     input(type="hidden" name="_csrf" value=csrfToken)
                     div     
                         label.block.text-sm.uppercase.text-gray-600.mb-2.font-nold Nombre Completo: 
