--- a/views/auth/reset-password.pug
+++ b/views/auth/reset-password.pug
@@ -13,7 +13,7 @@ block contenido
 
         .mt-8.mx-auto.max-w-md 
             .bg-white.py-8.px-4.shadow
-                form.space-y-5(method="POST" action="/auth/passwordRecovery/:token" novalidate) 
+                form.space-y-5(method="POST" novalidate) 
                     input(type="hidden" name="_csrf" value= csrfToken)
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-3.font-bold(for="new_password") Ingresa tu nueva contraseña:
