--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,14 +1,21 @@
 extends ../layout/index
 
 block contenido 
+
+    
     .py-10 
         h1.text-center.text-4xl.my-10.font-extrabold.text-indigo-600 Bienes
             span.font-normal.text-black Raíces
         h2.text-center.font-extrabold.text-2xl= page
 
+        if errors
+            div(class="max-w-md mx-auto my-10")
+                each error in errors
+                    p.bg-red-600.text-white.uppercase.text-xs.p-2.mb-1.font-bold= error.msg
+
         .mt-8.mx-auto.max-w-md
             .bg-white.py-8.px-4.shadow
-                form(action="").space-y-5.px-6
+                form(action="/auth/login" method="POST").space-y-5.px-6
                     input(type="hidden" name="_csrf" value= csrfToken)
                     div
                         label.block.text-sm.uppercase.text-gray-600.mb-2.font-nold Correo Electrónico: 
